<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:id="@+id/promptTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_countdown_prompt"
            android:textColor="@color/almostWhite"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
            android:id="@+id/hoursEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shutdown_default_time"
            android:autofillHints="@string/shutdown_default_time"
            android:textColor="@color/orange"
            android:layout_marginTop="0dp"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/promptTv"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="o" />

    <TextView
            android:id="@+id/hoursTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_countdown_hours"
            android:textColor="@color/almostWhite"
            android:textSize="16sp"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toTopOf="@id/hoursEt"
            app:layout_constraintBottom_toBottomOf="@id/hoursEt"
            app:layout_constraintStart_toEndOf="@id/hoursEt"
    />

    <EditText
            android:id="@+id/minutesEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shutdown_default_time"
            android:autofillHints="@string/shutdown_default_time"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toTopOf="@id/hoursEt"
            app:layout_constraintStart_toEndOf="@id/hoursTv"
            tools:targetApi="o" />

    <TextView
            android:id="@+id/minutesTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_countdown_minutes"
            android:textColor="@color/almostWhite"
            android:textSize="16sp"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toTopOf="@id/minutesEt"
            app:layout_constraintBottom_toBottomOf="@id/minutesEt"
            app:layout_constraintStart_toEndOf="@id/minutesEt"
    />

    <EditText
            android:id="@+id/secondsEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shutdown_default_time"
            android:autofillHints="@string/shutdown_default_time"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toTopOf="@id/minutesEt"
            app:layout_constraintStart_toEndOf="@id/minutesTv"
            tools:targetApi="o" />

    <TextView
            android:id="@+id/secondsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_countdown_seconds"
            android:textColor="@color/almostWhite"
            android:textSize="16sp"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toTopOf="@id/secondsEt"
            app:layout_constraintBottom_toBottomOf="@id/secondsEt"
            app:layout_constraintStart_toEndOf="@id/secondsEt"
    />

    <TextView
            android:id="@+id/declineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="17sp"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/hoursEt"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/confirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="17sp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/hoursEt"
            app:layout_constraintEnd_toStartOf="@id/declineTv"
    />

</androidx.constraintlayout.widget.ConstraintLayout>