<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/power_control_title"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
    />

    <RelativeLayout
            android:id="@+id/shutdownScheduledLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/titleTv"
    >

        <TextView
                android:id="@+id/shutdownScheduledLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shutdown scheduled:"
                android:textSize="17sp"
                android:textColor="@color/almostWhite"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
        />

        <TextView
                android:id="@+id/shutdownScheduledCountdownTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/almostWhite"
                android:layout_below="@id/shutdownScheduledLabelTv"
        />

        <TextView
                android:id="@+id/abortShutdownTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abort"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
        />

    </RelativeLayout>

    <Button
            android:id="@+id/shutdownNowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_drawable"
            android:text="@string/power_control_shutdown_btn"
            android:textSize="17sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/shutdownScheduledLayout"
    />

    <Button
            android:id="@+id/scheduledShutdownBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_drawable"
            android:text="@string/power_control_scheduled_shutdown_btn"
            android:textSize="17sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/shutdownNowBtn"
    />

    <Button
            android:id="@+id/restartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_drawable"
            android:text="@string/power_control_restart_btn"
            android:textSize="17sp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32sp"
            android:layout_marginStart="32sp"
            app:layout_constraintTop_toBottomOf="@id/scheduledShutdownBtn"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>