<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/dialogBackground"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/almostWhite"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            android:text="@string/enter_ip_dialog_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/messageTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/almostWhite"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_ip_dialog_message"
            app:layout_constraintTop_toBottomOf="@id/titleTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
            android:id="@+id/ipEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ip_dialog_hint"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="15"
            android:digits="0123456789."
            android:imeOptions="actionDone"
            android:text="172.168.0.1"
            app:layout_constraintTop_toBottomOf="@id/messageTv"
            app:layout_constraintStart_toStartOf="@id/messageTv"
            app:layout_constraintEnd_toEndOf="@id/messageTv" />

    <TextView
            android:id="@+id/declineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cancel"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="17sp"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/ipEt"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/confirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="confirm"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="17sp"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/ipEt"
            app:layout_constraintEnd_toStartOf="@id/declineTv"
    />


</androidx.constraintlayout.widget.ConstraintLayout>